# ChangeLog for dev-perl/PPI
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/PPI/ChangeLog,v 1.10 2006/09/07 12:08:06 yuval Exp $

*PPI-1.117 (07 Sep 2006)

  07 Sep 2006; Yuval Yaari <yuval@gentoo.org> +PPI-1.117.ebuild:
  Version bump

  18 Aug 2006; Michael Cummings <mcummings@gentoo.org> PPI-1.112.ebuild:
  Marking amd64 stable

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org> PPI-1.110.ebuild,
  PPI-1.112.ebuild, PPI-1.115.ebuild:
  Adding perl dep; fixed DEPEND

  04 Jul 2006; Christian Hartmann <ian@gentoo.org> PPI-1.110.ebuild,
  PPI-1.112.ebuild, PPI-1.115.ebuild:
  Fixed RDEPEND wrt bug #134781

*PPI-1.115 (23 Jun 2006)

  23 Jun 2006; Michael Cummings <mcummings@gentoo.org> +PPI-1.115.ebuild:
  Version bump upstream

  12 Jun 2006; Michael Cummings <mcummings@gentoo.org> PPI-1.110.ebuild,
  PPI-1.112.ebuild:
  Marking sparc stable

  12 Jun 2006; Michael Cummings <mcummings@gentoo.org> PPI-1.112.ebuild:
  Keywording ~amd64

*PPI-1.112 (01 May 2006)

  01 May 2006; <mcumming@gentoo.org> +PPI-1.112.ebuild:
  Version bump

  21 Apr 2006; <mcumming@gentoo.org> PPI-1.110.ebuild:
  Fixed dep for list-util

*PPI-1.110 (20 Apr 2006)

  20 Apr 2006; <mcummings@gentoo.org> +metadata.xml, +PPI-1.110.ebuild:
  Dep for perl-critic
