@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Object/Test-Object-0.06.ebuild,v 1.1 2006/09/07 12:06:08 yuval Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Object/Test-Object-0.06.ebuild,v 1.2 2006/09/07 17:51:04 mcummings Exp $
 
 inherit perl-module
 
@@ -10,7 +10,7 @@ SRC_URI="mirror://cpan/authors/id/A/AD/ADAMK/${P}.tar.gz"
 
 LICENSE="|| ( Artistic GPL-2 )"
 SLOT="0"
-KEYWORDS="~x86"
+KEYWORDS="~amd64 ~sparc ~x86"
 IUSE=""
 
 SRC_TEST="do"
