@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Test-Object
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Object/ChangeLog,v 1.1 2006/09/07 12:06:08 yuval Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Object/ChangeLog,v 1.2 2006/09/07 17:51:04 mcummings Exp $
+
+  07 Sep 2006; Michael Cummings <mcummings@gentoo.org>
+  Test-Object-0.06.ebuild:
+  Bug 146678, keywording ~sparc and ~amd64
 
 *Test-Object-0.06 (07 Sep 2006)
 
